# generate_xml

./: CMakeLists.txt  generateXML.cpp  generateXML.h  inputVideo.cpp  inputVideo.h  main.cpp
